--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -16,7 +16,7 @@
 {% include browser-upgrade.html %}
 
 {% if page.image.feature %}<header class="masthead">
-	{% if site.logo != null %}
+	{% if site.logo != null and page.logo == true %}
 		<div class="wrap">
 			<a href="{{ site.url }}/" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.url }}/images/{{ site.logo }}" width="200" height="200" alt="{{ site.title }} logo" class="animated fadeInDown"></a>
 		</div>
@@ -24,11 +24,13 @@
 </header><!-- /.masthead -->
 {% else %}<header class="masthead">
 	<div class="wrap">
-      {% if site.logo != null %}
+      {% if site.logo != null and page.logo == true %}
   		<a href="{{ site.url }}/" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.url }}/images/{{ site.logo }}" width="200" height="200" alt="{{ site.title }} logo" class="animated fadeInDown"></a>
       {% endif %}
+      {% if page.logo == true %}
       <h1 class="site-title animated fadeIn"><a href="{{ site.url }}/">{{ site.title }}</a></h1>
 		<h2 class="site-description animated fadeIn" itemprop="description">{{ site.description }}</h2>
+      {% endif %}
 	</div>
 </header><!-- /.masthead -->{% endif %}
 
